javascript 2일차 - 데이터 타입과 타입별 쓰이는 함수 , 배열과 배열에서 쓰이는 함수

--- a/javascript01-3.html
+++ b/javascript01-3.html
@@ -109,7 +109,18 @@
         console.log(!(x == y));
 
 
-        // 비트 연산자
+        // 비트 연산자 == 2진법 연산자
+        // 자바스크립트에서 비트 연산은 32비트 숫자 체계를 사용함
+        // 비트(bit) = 컴퓨터의 최소 단위, 2진법 체계 사용, 8진법
+        // 바이트(byte) = 컴퓨터의 용량 단위 1byte == 8bit
+        // 2진법 비트 연산을 하기위한 연산자
+        // &(and) : 곱연산 - 1*1 일 경우만 1 나머지는 0
+        // |(or) : 합연산 - 0 + 0일 경우만 0, 나머지는 1
+        // ~(not) : 부정연산 - 1일경우 0, 0일경우 1
+        // ^(xor) : 합연산 - 1 + 1 혹은 0 + 0 은 0, 1 + 0 의 경우만 1 / 동일한 값이 들어오면 0, 다른값이 들어오면 1
+        // << : 시프트 연산자, 현재값 위치에서 왼쪾으로 이동
+        // >> : 시프트 연산자, 현재값 위치에서 오른쪾으로 이동
+        // >>> : 오른쪽 시프트 0 채우기 연산, 현재 값을 오른쪽으로 이동시키고 왼쪽에 0을 추가
 
     </script>
 </head>
