20 02 11 jQuery 3일차 jQuery를 이용한 태그의 크기 설정 및 변환 / 트래버싱 / 필터링 /

--- a/jquery02-6.html
+++ b/jquery02-6.html
@@ -14,6 +14,13 @@
         <div id="div01Div1"></div>
         <br>
         <button id="div01Btn1">너비, 높이 출력</button>
+        <button id="div01Btn2">너비, 높이 설정 + 출력</button>
+        <br><hr><br>
+        <button id="div01Btn3">innerWidth,Height(padding까지) 출력</button>
+        <button id="div01Btn4">outerWidth,Height(border까지) 출력</button>
+        <button id="div01Btn5">outer(true)Width,Height(margin까지) 출력</button>
     </div>
+
+    
 </body>
 </html>
